--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Automated software testing with Playwright",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tests:chrome": "playwright test --config=playwright.config.ts --project=Chromium",
+    "tests:firefox": "playwright test --config=playwright.config.ts --project=Firefox",
+    "tests:webkit": "playwright test --config=playwright.config.ts --project=Webkit"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,7 @@
   },
   "homepage": "https://github.com/Anastasiia-web/AutomatedTestingWithPlaywright#readme",
   "dependencies": {
-    "@playwright/test": "^1.27.0",
+    "@playwright/test": "^1.27.1",
     "prettier": "^2.7.1"
   }
 }
